--- a/src/static/styles/pages/_home.scss
+++ b/src/static/styles/pages/_home.scss
@@ -295,12 +295,12 @@
       margin-block: 24px;
 
       // See utility classes
-      // &.gold {
-      //   border-color: $gold;
+      // &.color-primary {
+      //   border-color: var(--primary-accent-color);
       // }
 
-      // &.pink {
-      //   border-color: $pink;
+      // &.color-secondary {
+      //   border-color: var(--secondary-accent-color);
       // }
     }
 
