--- a/src/_includes/partials/text-block.html
+++ b/src/_includes/partials/text-block.html
@@ -1,13 +1,13 @@
 <div class="text-block" id="{{ preview_id }}">
   <p class="h3">
     {% if symbol_start %}
-    <span class="alchemy-symbol gold">{{ symbol_start }} &nbsp;</span>
+    <span class="alchemy-symbol color-primary">{{ symbol_start }} &nbsp;</span>
     {% endif %}
     <!-- prettier-ignore -->
     {{ text_block }}
     
     {% if symbol_end %}
-    <span class="alchemy-symbol pink">{{ symbol_end }}</span>
+    <span class="alchemy-symbol color-secondary">{{ symbol_end }}</span>
     {% endif %}
   </p>
 
