--- a/src/static/styles/_variables.scss
+++ b/src/static/styles/_variables.scss
@@ -5,10 +5,9 @@ $black: #313131;
 $grey-dark: #313131;
 $grey-light: #31313180;
 $white: #fafafa;
-// $gold: #d1b768;
-// $pink: #d982e0;
-$gold: #ebc554;
-$pink: #7d71f0;
+// $blue: #5555fc;
+$gold: #ebc554; // ensure hex code for particles.js
+$pink: #ff859d; // ensure hex code for particles.js
 
 // Easing
 $cubic-ease: cubic-bezier(0.18, 0.97, 0.47, 1);
