removed closing <hr> tag, mirage text gsap from section rather than elem

--- a/src/_includes/partials/services.html
+++ b/src/_includes/partials/services.html
@@ -14,7 +14,7 @@
   </h2>
 
   {% for service in services_section.services %}
-  <hr class="service-divider gsap-animate" aria-hidden="true">
+  <hr class="service-divider gsap-animate" aria-hidden="true" />
   <div
     class="service-block {% if loop.last %}service-block--last{% endif %} gsap-animate"
   >
@@ -45,7 +45,7 @@
   <hr
     class="service-divider service-divider--last gsap-animate"
     aria-hidden="true"
-  ></hr>
+  />
   {% endif %}
 
   <!-- prettier-ignore -->
